--- a/stylesheet.css
+++ b/stylesheet.css
@@ -198,19 +198,27 @@ aside {
   max-width: 100%;
 }
 
-.archive h3 {
+.archive {
   text-align: center;
+  width: 100%;
 }
 
 .archive ul {
   list-style: none;
   margin-top: 30px;
+  text-align: center;
+  display: inline-block;
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .archive li {
   border-top: 1px solid black;
   border-bottom: 1px solid black;
-  padding: 15px 0;
+  padding: 10px 0;
+  text-align: center;
+  width: 100%;
 }
 
 footer {
@@ -250,6 +258,11 @@ footer {
   text-decoration: none;
   color: black;
   border-bottom: solid 1px #777;
+}
+
+.menu ul {
+  margin: 0;
+  padding: 0;
 }
 
 .menu li {
